--- a/EventSource.xcodeproj/xcshareddata/xcschemes/EventSource-Mac.xcscheme
+++ b/EventSource.xcodeproj/xcshareddata/xcschemes/EventSource-Mac.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "28291CCE1D0B30DD00B06A27"
-               BuildableName = "EventSource-Mac.framework"
+               BuildableName = "EventSource.framework"
                BlueprintName = "EventSource-Mac"
                ReferencedContainer = "container:EventSource.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "28291CCE1D0B30DD00B06A27"
-            BuildableName = "EventSource-Mac.framework"
+            BuildableName = "EventSource.framework"
             BlueprintName = "EventSource-Mac"
             ReferencedContainer = "container:EventSource.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "28291CCE1D0B30DD00B06A27"
-            BuildableName = "EventSource-Mac.framework"
+            BuildableName = "EventSource.framework"
             BlueprintName = "EventSource-Mac"
             ReferencedContainer = "container:EventSource.xcodeproj">
          </BuildableReference>
